--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>MessageMe</title>
+    
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= favicon_link_tag%>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +13,13 @@
   </head>
 
   <body>
-    <%= yield %>
+<div class="ui large menu inverted">
+  <div class="ui container">
+    <%= render 'layouts/navigation' %>
+  </div>
+</div>
+    <div class="ui container">
+     <%= yield %>
+    </div>
   </body>
 </html>
