Front end part of the app 70% ready

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import "semantic-ui";
+
+body {
+  background-color: #DADADA;
+}
+
+.chatbox {
+  height: 450px;
+}
+
+.colored {
+  color: #2D8EFF;
+}
