--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-<div class="ui large menu inverted">
+<div class="ui large menu inverted blue">
   <div class="ui container">
     <%= render 'layouts/navigation' %>
   </div>
