Ready to use and getting started on real-time chating

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,3 +11,22 @@ body {
 .colored {
   color: #2D8EFF;
 }
+
+.coloredRED {
+  color: red
+}
+
+.boldT {
+  font-weight: bold;
+  font-style: italic;
+}
+
+ .borderD {
+  outline: none;
+   border: 0 none !important;
+   box-shadow: none;
+ }
+
+ .CC {
+   text-align: center;
+ }
