--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,12 +21,11 @@ body {
   font-style: italic;
 }
 
- .borderD {
-  outline: none;
-   border: 0 none !important;
-   box-shadow: none;
- }
-
  .CC {
    text-align: center;
+ }
+
+ #messages {
+   height: 15em;
+   overflow: auto;
  }
